                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-08-2005 fixed: Stacking
 - 20-08-2005 added: ability to jump into the library view at specific locations using "genres", "artists", "albums", "songs",
              "top100songs", "top100albums", or "recentalbums" in xbmc.activatewindow() as the destination parameter
              ex: xbmc.activatewindow(mymusiclibrary,top100albums)
 - 20-08-2005 added: option to hide file names in thumbs view in My Pictures
 - 20-08-2005 fixed: HTTPAPI: when playing a stream GetCurrentlyPlaying could cause problems later
 - 20-08-2005 fixed: After reloading or changing skins playing music or switching from fullscreenvideo to gui would crash
 - 20-08-2005 fixed: Local Empty folders was not open able [GeminiServer]
 - 20-08-2005 added: System Info: System Uptime [GeminiServer]
                     Will display the Time that have elapsed since the system was started!
                     It will display Minutes, Hours and Days! The display values will be Autodetected!
 - 20-08-2005 fixed: XBMC Nickname setting and detection [GeminiServer]
 - 20-08-2005 fixed: Conditional visible tags broken.
 - 19-08-2005 fixed: OSD menu disappears after skin reload + videowindow was not freeing it's resources.
 - 19-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 19-08-2005 updated: German language file
 - 19-08-2005 updated: Spanish language file (Thnx to jose_t)
 - 19-08-2005 updated: Finnish language file (Thnx to jutski)
 - 19-08-2005 updated: Korean language file (Thnx to AkoXko)
 - 19-08-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 19-08-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)